--- a/python/README
+++ b/python/README
@@ -3,8 +3,7 @@ Dependencies
 
 - numpy 1.6.2
 - pandas 0.10.1
-- python-zibopt 0.7.3
-  - ziboptsuite 2.1.1
+- gurobipy 5.1.0
 - Beautiful Soup 4.1.3
 - colormath 1.0.8
 
@@ -15,90 +14,66 @@ Installation
 
   $ sudo pip install numpy pandas beautifulsoup4 colormath python-algebraic
 
-2. Build and install ziboptsuite
+2. Install gurobi (see www.gurobi.com)
 
-- Download ZIB Optimization Suite v2.1.1 source code from [1] and python-zibopt
-  v0.7.2 source code from [2] and put them both in ~/src
+Usage
+=====
 
-[1] http://scip.zib.de/download.shtml
-[2] http://code.google.com/p/python-zibopt/downloads/list
+1. Download store information
 
-$ ### build ziboptsuite ###
-$ mkdir ~/src
-$ mkdir ~/lib
-$ cd ~/src
-$ tar xvfz ziboptsuite-2.1.1.tgz
-$ cd ziboptsuite-2.1.1
-$ make ziboptlib SHARED=true ZIMPL=false ZLIB=false READLINE=false
-$
-$ ### ** Extracting SoPlex archive "/Users/duckworthd/src/ziboptsuite-2.1.1/soplex-1.6.0.tgz".
-$ ### ** Extracting ZIMPL archive "/Users/duckworthd/src/ziboptsuite-2.1.1/zimpl-3.2.0.tgz".
-$ ### ** Extracting SCIP archive "/Users/duckworthd/src/ziboptsuite-2.1.1/scip-2.1.1.tgz".
-$ ### ** compile libraries statically with compiler flag -fPIC
-$ ### ...
-$ ### ...
-$ ### ...
-$ ### ** Build complete.
-$ ### ** Find your SCIP binary in "/Users/duckworthd/src/ziboptsuite-2.1.1/scip-2.1.1/bin".
-$ ### ** Enter "make test" to solve a number of MIPLIB instances in order to verify that SCIP runs correctly.
-$ ### 
-$ ### -> generating library lib/libzibopt-2.1.1.darwin.x86_64.gnu.opt.so
+  $ python bin/main.py stores \
+    --output stores.json
 
+2. Download part prices
 
-$ ### install ziboptsuite ###
-$ cp lib/libzibopt-2.1.1.linux.x86_64.gnu.opt.so ~/lib/
-$ ln -s ~/lib/libzibopt-2.1.1.linux.x86_64.gnu.opt.so ~/lib/libzibopt.so
-$ export LD_LIBRARY_PATH=$HOME/lib
-$ export LIBRARY_PATH=$HOME/lib
-$ export C_INCLUDE_PATH=~/src/ziboptsuite-2.1.1/scip-2.1.1/src/
+  $ python bin/main.py price_guide \
+    --parts-list parts.bsx \
+    --store-list stores.json \
+    --output price_guide.json
 
-$ ### build python-zibopt revision 245 ###
-$ cd ~/src
-$ tar zxvf python-zibopt-0.7.2.dev-r226.tar.gz
-$ cd python-zibopt-0.7.2.dev-r226
-$ python setup.py build
-$ python setup.py test
-$ ### running test
-$ ### running egg_info
-$ ### writing requirements to src/python_zibopt.egg-info/requires.txt
-$ ### writing src/python_zibopt.egg-info/PKG-INFO
-$ ### ...
-$ ### ...
-$ ### ...
-$ ### Sets and gets variable branching priority ... ok
-$ ### 
-$ ### ----------------------------------------------------------------------
-$ ### Ran 49 tests in 0.389s
-$ ### 
-$ ### OK
+3. Find stores to use
 
-if you have issues during the build stage in finding <blockmemshell/memory.h>,
-then setup.py is ignoring your C_INCLUDE_PATH and LIBRARY_PATH variables.
-Change the following function in setup.py from this,
+  $ gurobi.sh bin/main.py minimize \
+    --parts-list parts.bsx \
+    --price-guide price_guide.json \
+    --store-list data/stores.json \
+    --shipping-cost 20.0 \          # estimated cost to ship from any store
+    --target-country USA \          # only use stores that ship here
+    --feedback 20 \                 # minimum feedback rating
+    --output recommendations
 
-    def zibopt_ext(name, c_file):
-        # ZIBOpt headers and shared objects will must be in the user's
-        # C_INCLUDE_PATH and LIBRARY_PATH, respectively.
-        return Extension('zibopt.%s' % name, 
-            sources = ['src/ext/%s' % c_file],
-            libraries = ['zibopt']
-        )
+4. Create BrickLink Wanted Lists
 
-to this,
+  $ python bin/main.py wanted_list \
+    --recommendation recommendations.json \
+    --output wanted.xml
 
-    from os.path import expanduser
+During this step, the program will prompt you to create wanted lists on
+bricklink with specific names. Go to www.bricklink.com/wantedView.asp and enter
+those names in the "Add New Wanted List" area, then copy/paste the ID of the
+new list back into the program and press Enter. Each of these names is the user
+ID of one shop owner.
 
-    def zibopt_ext(name, c_file):
-        # ZIBOpt headers and shared objects will must be in the user's
-        # C_INCLUDE_PATH and LIBRARY_PATH, respectively.
-        return Extension('zibopt.%s' % name, 
-            sources = ['src/ext/%s' % c_file],
-            include_dirs=[expanduser('~/src/ziboptsuite-2.1.1/scip-2.1.1/src/')],
-            library_dirs=[expanduser('~/lib')],
-            libraries = ['zibopt']
-        )
+5. Go to www.bricklink.com/wantedXML.asp and upload wanted.xml. If you entered
+the correct Wanted List IDs in the previous steps, you should have no issues
+here.
 
-then execute "python setup.py build" again
+6. Go to www.bricklink.com/wantedShop.asp and uncheck all but one wanted list.
 
-$ ### install python-zibopt ###
-$ sudo python setup.py install
+Remember the Wanted List name.  For example, if a list is named "My edeevo
+Wanted List (4)", remember "edeevo".
+
+Click on the link for the first store listed. Then look at your URL bar and
+change,
+  ...p=<owner name>&...
+to
+  ...p=<wanted list name>&...
+This will take you to the store for this Wanted List.
+
+7. Click the BrickRake bookmarklet in your browser toolbar. You should see
+quantities appear in each box.  Go to the bottom of the page and click "Add
+Selected Items to Shopping Cart". Double check to ensure that there are no
+parts that couldn't be added (this can happen, for example, if parts are only
+sold in sets of 2).
+
+8. Buy buy buy!
